fluid_layout: Fix narrow description not aligned with content.
Fixes #30619

We adjust the left margin of middle column to place the header middle
column next the left sidebar to fix the alignment issue.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -1599,6 +1599,12 @@ div.toggle_resolve_topic_spinner .loading_indicator_spinner {
         .app-main .column-middle {
             margin-left: 7px;
         }
+
+        @container header-container (width > $cq_md_min) {
+            #navbar-middle {
+                margin-left: var(--middle-column-left-margin-fluid-layout);
+            }
+        }
     }
 
     @container header-container (width < $cq_xl_min) {
